--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "main": "server.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seeds" : "node seeds/index.js"
   },
   "repository": {
     "type": "git",
