--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seeds" : "node seeds/index.js"
+    "seed" : "node seeds/index.js"
   },
   "repository": {
     "type": "git",
